<resources>
    <string name="app_name">Medical Tag</string>

    <string name="title_activity_tutorial">How To Use Medical Tag</string>
    <string name="title_actvity_taginformation">Tag Information</string>

    <string name="action_about">About &amp; Settings</string>

    <string name="tag_groupName">Group name</string>
    <string name="tag_firstGroupName">Family</string>
    <string name="tag_name">Your full name</string>
    <string name="tag_dateOfBirth">Date of birth</string>
    <string name="tag_gender">Gender</string>
    <string name="tag_woman">Woman</string>
    <string name="tag_man">Man</string>
    <string name="tag_isPregnant">Are you pregnant ?</string>
    <string name="tag_state">State</string>
    <string name="tag_insuranceInfo">Your insurance mediator</string>
    <string name="tag_weight">Weight [kg]</string>
    <string name="tag_height">Height [cm]</string>
    <string name="tag_bloodType">Blood group</string>
    <string name="tag_haveDiabetes">Do you have diabetes ?</string>
    <string name="tag_allergies">Allergies</string>
    <string name="tag_medicamentInUse">Medicaments in use</string>
    <string name="tag_firstContact">Contact 1</string>
    <string name="tag_secondContact">Contact 2</string>
    <string name="tag_thirdContact">Contact 3</string>
    <string name="tag_chooseContact">Choose contact from phonebook</string>

    <string name="tagPlease">Tag Medical Tag below the camera</string>
    <string name="tag_successfullyWritten">Your information was successfully saved to your Medical Tag :)</string>
    <string name="tag_notEnabled">NFC is not enabled right now, enable it in Settings of your phone and then come back :)</string>
    <string name="tag_notSupported">NFC is not supported on your mobile, so unfortunately you cannot use this application :(</string>
    <string name="tag_tab_maininfo">Main</string>
    <string name="tag_tab_medical">Medical</string>
    <string name="tag_tab_contacts">Emergency contacts</string>

    <string name="tag_saveTag">Save Tag</string>
    <string name="tag_upload">Upload To Tag</string>

    <string name="tab_myTags">My Tags</string>
    <string name="tab_getBand">Get Band</string>
    <string name="tab_getSticker">Get Sticker</string>
    <string name="tag_reading">Reading Medical Tag</string>

    <!--GET TAGS PAGE-->
    <string name="gettags_bandtitle">Medical Tag BAND</string>
    <string name="gettags_banddescription">NFC bands are useful equipment for children when going to camps, school trips or abroad.
        Band is proper gadget for elderly people as well as for people with Alzheimer disease.
        Thanks to the band, person can carry the most important and medical information everywhere with him/her. In case you consider buying big amount of bands and tags,
        I advise you to shop bands and tags on Alibaba.com.  </string>
    <string name="gettags_howtoband">How to make my NFC band ?</string>
    <string name="gettags_buytagband">BUY TAG</string>
    <string name="gettags_buyband">BUY BAND</string>

    <string name="gettags_stickertitle">Medical Tag STICKER</string>
    <string name="gettags_stickerdescription">NFC stickers are recommended equipment for all people who need to have
        their medical information always with them and must have equipment for people who plan go skiing or do other type of dangerous sport.
        Stick the sticker simply to your wallet or on your helmet for easier recognition of tag by ambulance.</string>
    <string name="gettags_howtosticker">How to make my NFC sticker ?</string>
    <string name="gettags_buytagsticker">BUY TAG</string>
    <string name="gettags_getsticker">GET STICKER</string>


    <string-array name="countries_array">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cabo Verde</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Central African Republic (CAR)</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Democratic Republic of the Congo</item>
        <item>Republic of the Congo</item>
        <item>Costa Rica</item>
        <item>Cote d Ivoire</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Greece</item>
        <item>Grenada</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Kosovo</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macedonia</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar (Burma)</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>North Korea</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Palestine</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Qatar</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Korea</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Timor-Leste</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Tuvalu</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates (UAE)</item>
        <item>United Kingdom (UK)</item>
        <item>United States of America (USA)</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Vatican City (Holy See)</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>

    <string-array name="bloodTypes_array">
        <item>A +</item>
        <item>A -</item>
        <item>B +</item>
        <item>B -</item>
        <item>AB +</item>
        <item>AB -</item>
        <item>0 +</item>
        <item>0 -</item>
    </string-array>

    <string-array name="groupNames">
        <item>Family</item>
        <item>Ski course - kvinta</item>
    </string-array>
    <string name="title_activity_nfclaunch">NFCLaunchActivity</string>
    <string name="title_activity_about_settings">AboutSettingsActivity</string>

</resources>
