<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="700dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="800dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="cz.barush.medicaltag.TagInfoActivity$PlaceholderFragment">


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_groupName"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"/>
        <Spinner
            android:id="@+id/tag_groupName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/groupNames"/>

            <EditText
                android:id="@+id/tag_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tag_name"
                android:inputType="textPersonName" />

            <DatePicker
                android:id="@+id/tag_dateOfBirth"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"/>

            <AutoCompleteTextView
                android:id="@+id/tag_state"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tag_state"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_gender"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"/>
        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp">

            <RadioButton android:id="@+id/tag_woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_woman"
                android:onClick="changeIfPregnantVisibility"
                android:layout_marginRight="36dp"/>

            <RadioButton android:id="@+id/tag_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_man"
                android:onClick="changeIfPregnantVisibility"
                android:layout_gravity="right"/>

        </RadioGroup>

        <CheckBox android:id="@+id/tag_pregnant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_isPregnant"
            android:visibility="invisible"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"/>

        <EditText
            android:id="@+id/tag_height"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tag_height"
            android:inputType="numberDecimal"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"/>

        <EditText
            android:id="@+id/tag_weight"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tag_weight"
            android:inputType="numberDecimal"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"/>

        <EditText
            android:id="@+id/tag_insurance"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tag_insuranceInfo"
            android:inputType="text"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"/>



    </LinearLayout>
</ScrollView>
