<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="cz.barush.medicaltag.MainActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/band_image"
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:src="@drawable/bandhorizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/band_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/gettags_bandtitle"
                android:textSize="20dp"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/band_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:text="@string/gettags_banddescription"/>

            <TextView
                android:id="@+id/band_tutorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:textSize="18dp"
                android:text="@string/gettags_howtoband"
                android:textColor="@color/colorPrimary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/band_nfc_buy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginRight="12dp"
                    android:background="@color/colorPrimaryDark"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="@string/gettags_buytagband"
                    android:textColor="@android:color/white"/>

                <Button
                    android:id="@+id/band_buy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="12dp"
                    android:background="@color/colorPrimary"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="@string/gettags_buyband"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
