<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="cz.barush.medicaltag.MainActivity$PlaceholderFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:id="@+id/sticker_image"
                android:layout_height="180dp"
                android:layout_width="wrap_content"
                android:layout_marginRight="12dp"
                android:padding="12dp"
                android:src="@drawable/horizontalsticker"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sticker_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/gettags_stickertitle"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:textStyle="bold"/>


                <TextView
                    android:id="@+id/sticker_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/gettags_stickerdescription"/>

                <TextView
                    android:id="@+id/sticker_tutorial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:clickable="true"
                    android:textSize="18dp"
                    android:text="@string/gettags_howtosticker"
                    android:textColor="@color/colorPrimary"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/nfc_sticker_buy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:background="@color/colorPrimaryDark"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:text="@string/gettags_buytagsticker"
                        android:layout_gravity="left"
                        android:textColor="@android:color/white"/>

                    <Button
                        android:id="@+id/sticker_buy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_gravity="left"
                        android:background="@color/colorPrimary"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:text="@string/gettags_getsticker"
                        android:textColor="@android:color/white"/>
                </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>