<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="cz.barush.medicaltag.TagInfoActivity$PlaceholderFragment">>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="36dp">

            <TextView
                android:id="@+id/tag_firstContactName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/tag_firstContact"/>

            <EditText
                android:id="@+id/tag_firstContact"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:hint="@string/tag_chooseContact"
                android:inputType="numberDecimal"/>
        </LinearLayout>
        <ImageButton
            android:id="@+id/tag_call1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:visibility="gone"
            android:src="@drawable/ic_call"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="36dp">

            <TextView
                android:id="@+id/tag_secondContactName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/tag_secondContact"/>

            <EditText
                android:id="@+id/tag_secondContact"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:hint="@string/tag_chooseContact"
                android:inputType="numberDecimal"/>
        </LinearLayout>
        <ImageButton
            android:id="@+id/tag_call2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:visibility="gone"
            android:src="@drawable/ic_call"/>
    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal">-->

        <!--<LinearLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical"-->
            <!--android:layout_marginRight="36dp">-->

            <!--<TextView-->
                <!--android:id="@+id/tag_thirdContactName"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="6dp"-->
                <!--android:text="@string/tag_thirdContact"/>-->

            <!--<EditText-->
                <!--android:id="@+id/tag_thirdContact"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="6dp"-->
                <!--android:hint="@string/tag_chooseContact"-->
                <!--android:inputType="numberDecimal"/>-->
        <!--</LinearLayout>-->
        <!--<ImageButton-->
            <!--android:id="@+id/tag_call3"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_vertical"-->
            <!--android:background="@android:color/transparent"-->
            <!--android:clickable="true"-->
            <!--android:visibility="gone"-->
            <!--android:src="@drawable/ic_call"/>-->
    <!--</LinearLayout>-->

</LinearLayout>
